<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_30"
    android:orientation="vertical"
    android:id="@+id/rl_repeat"

    >

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mg_20"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/mg_15"
        >

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/sunday"
            android:textSize="@dimen/mg_16"
            android:paddingTop="@dimen/mg_10"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/monday"
            android:paddingTop="@dimen/mg_10"
            android:textSize="@dimen/mg_16"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/tuesday"
            android:paddingTop="@dimen/mg_10"
            android:textSize="@dimen/mg_16"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/wednesday"
            android:textSize="@dimen/mg_16"
            android:paddingTop="@dimen/mg_10"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/thursday"
            android:textSize="@dimen/mg_16"
            android:paddingTop="@dimen/mg_10"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/friday"
            android:paddingTop="@dimen/mg_10"
            android:textSize="@dimen/mg_16"
            android:paddingBottom="@dimen/mg_10"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:layoutDirection="rtl"
            android:text="@string/saturday"
            android:textSize="@dimen/mg_16"
            android:paddingTop="@dimen/mg_10"
            android:paddingBottom="@dimen/mg_10"
            />

    </LinearLayout>








</LinearLayout>